--- a/build.xml
+++ b/build.xml
@@ -1,23 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="Build slack plugin" default="packaging">
-    <property name="dir.target.jar" value="./out" />
-    <property name="dir.classes" value="./bin" />
+<project name="Build slack plugin" default="dist">
 
-    <property name="jar-codec-file" value="./lib/commons-codec-1.9.jar"/>
-    <property name="jar-logging-file" value="./lib/commons-logging-1.2.jar"/>
-    <property name="jar-gson-file" value="./lib/gson-2.6.2.jar"/>
-    <property name="jar-httpclient-file" value="./lib/httpclient-4.5.2.jar"/>
-    <property name="jar-httpcore-file" value="./lib/httpcore-4.4.4.jar"/>
+    <description>
+        simple example build file
+    </description>
+    <!-- set global properties for this build -->
+    <property environment="env"/>
+    <property name="src" location="src"/>
+    <property name="build" location="build"/>
+    <property name="dist" location="dist"/>
+    <property name="scouter.server.lib" location="${env.SCOUTER_SERVER_HOME}/lib/scouter.server-0.4.13.jar"/>
 
-    <target name="packaging">
-        <mkdir dir="${dir.target.jar}" />
-        <jar destfile="${dir.target.jar}/scouter-plugin-server-alert-slack.jar">
-            <fileset dir="${dir.classes}"/>
-        </jar>
-    	<copy file="${jar-codec-file}" todir="${dir.target.jar}" verbose="true"/>
-    	<copy file="${jar-logging-file}" todir="${dir.target.jar}" verbose="true"/>
-        <copy file="${jar-gson-file}" todir="${dir.target.jar}" verbose="true"/>
-        <copy file="${jar-httpclient-file}" todir="${dir.target.jar}" verbose="true"/>
-        <copy file="${jar-httpcore-file}" todir="${dir.target.jar}" verbose="true"/>
+    <target name="init">
+        <!-- Create the time stamp -->
+        <tstamp/>
+        <!-- Create the build directory structure used by compile -->
+        <mkdir dir="${build}"/>
     </target>
+
+    <target name="compile" depends="init"
+            description="compile the source">
+
+        <copy todir="./lib" verbose="true">
+            <file file="${scouter.server.lib}"></file>
+        </copy>
+
+        <!-- Compile the java code from ${src} into ${build} -->
+        <javac srcdir="${src}" destdir="${build}">
+            <classpath>
+                <libfileset dir="./lib"></libfileset>
+            </classpath>
+        </javac>
+
+    </target>
+
+    <target name="dist" depends="compile"
+            description="generate the distribution">
+
+
+        <jar destfile="${env.SCOUTER_SERVER_HOME}/lib/scouter-plugin-server-alert-slack.jar">
+            <fileset dir="${build}"/>
+        </jar>
+
+        <copy todir="${env.SCOUTER_SERVER_HOME}/lib" verbose="true">
+            <fileset dir="./lib">
+                <exclude name="**/scouter.server*"/>
+            </fileset>
+        </copy>
+    </target>
+
+    <target name="clean"
+            description="clean up">
+        <!-- Delete the ${build} and ${dist} directory trees -->
+        <delete dir="${build}"/>
+        <delete dir="${env.SCOUTER_SERVER_HOME}/lib/scouter-plugin-server-alert-slack.jar"/>
+    </target>
+
 </project>
